--- a/package.json
+++ b/package.json
@@ -6,5 +6,11 @@
   "repository": "https://github.com/SerginhoLeal/panel-b2b-marks.git",
   "author": "Sergio Leal",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "scripts": {
+    "dev": "electron ."
+  },
+  "devDependencies": {
+    "electron": "^26.1.0"
+  }
 }
