--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
   "files.exclude":{
-    ".editorconfig": false,
-    ".gitignore": false,
-    "preload.js": false,
-    "yarn.lock": false,
-    "node_modules": false,
+    ".editorconfig": true,
+    ".gitignore": true,
+    "preload.js": true,
+    "yarn.lock": true,
+    "node_modules": true,
   }
 }
